home/apps/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: "linuxserver/homeassistant:2024.6.3"
          ports:
            - containerPort: 8123
          securityContext:
            runAsUser: 9001
            runAsGroup: 8001
            fsGroup: 8001
            capabilities:
              add:
                - CAP_DAC_OVERRIDE
                - CAP_FOWNER
          volumeMounts:
            - name: config
              mountPath: /config
            # - name: docker-run
            #   mountPath: /etc/services.d/home-assistant/run
      volumes:
        - name: config
          hostPath:
            path: /home/homeassistant/homeassistant-config
        # - name: docker-run
        #   hostPath:
        #     path: /home/homeassistant/homeassistant-config/docker/run
