home/apps/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8123
